--- a/charts/app-config/values-integration.yaml
+++ b/charts/app-config/values-integration.yaml
@@ -2636,6 +2636,7 @@ govukApplications:
 
   - name: static
     helmValues:
+      arch: arm64
       uploadStaticErrorPagesEnabled: true
       ingress:
         enabled: true
