--- a/charts/app-config/values-integration.yaml
+++ b/charts/app-config/values-integration.yaml
@@ -2222,6 +2222,7 @@ govukApplications:
 
   - name: search-api
     helmValues:
+      arch: arm64
       rails:
         enabled: false
       nginxClientMaxBodySize: 20M
