Run Email Service Workers on ARM

--- a/charts/app-config/values-integration.yaml
+++ b/charts/app-config/values-integration.yaml
@@ -956,6 +956,7 @@ govukApplications:
 
   - name: email-alert-service
     helmValues:
+      arch: arm64
       appEnabled: false
       podDisruptionBudget: {}
       rails:
