Run Search v2 Evaluator on ARM in Integration

--- a/charts/app-config/values-integration.yaml
+++ b/charts/app-config/values-integration.yaml
@@ -2400,6 +2400,7 @@ govukApplications:
 
   - name: search-v2-evaluator
     helmValues:
+      arch: arm64
       dbMigrationEnabled: false
       ingress:
         enabled: true
