Add image references for govuk-mirror
Previously the govuk-mirror job always used the "latest" image tag.

--- a/charts/app-config/values-production.yaml
+++ b/charts/app-config/values-production.yaml
@@ -1242,6 +1242,7 @@ govukApplications:
       - "govuk-dependency-checker"
       - "search-api"
       - "search-api-learn-to-rank"
+      - "govuk-mirror"
     helmValues:
       govukMirrorSync:
         iamRoleArn: arn:aws:iam::172025368201:role/govuk-mirror-sync
