Temporarily enable SLIMMER_WRAPPER_CHECK for frontend
This is done in order to help investigating the exception
raised only in production.
It should be disabled after the investigation is done.

--- a/charts/app-config/values-production.yaml
+++ b/charts/app-config/values-production.yaml
@@ -1119,6 +1119,8 @@ govukApplications:
               key: bearer_token
         - name: WEB_CONCURRENCY
           value: '4'
+        - name: SLIMMER_WRAPPER_CHECK
+          value: 'true'
 
   - name: draft-frontend
     repoName: frontend
